Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7822

Crash in repeat() constructing strings > 1GB

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • Impala 2.3.0, Impala 2.5.0, Impala 2.4.0, Impala 2.6.0, Impala 2.7.0, Impala 2.8.0, Impala 2.9.0, Impala 2.10.0, Impala 2.11.0, Impala 3.0, Impala 3.1.0
    • Impala 3.1.0
    • Backend

    Description

      select repeat('x', 1024 * 1024 * 1024 * 1024);
      
      #0  0x0000000004551aa3 in google_breakpad::ExceptionHandler::SignalHandler(int, siginfo_t*, void*) ()
      #1  0x00007f72cdc0f362 in ?? () from /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/libjvm.so
      #2  0x00007f72cdc138b9 in JVM_handle_linux_signal ()
         from /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/libjvm.so
      #3  0x00007f72cdc06f78 in ?? () from /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/libjvm.so
      #4  <signal handler called>
      #5  0x00007f72cab8a06c in ?? () from /lib/x86_64-linux-gnu/libc.so.6
      #6  0x00000000030e19da in impala::StringFunctions::Repeat (context=0x721f800, str=..., n=...)
          at be/src/exprs/string-functions-ir.cc:100
      #7  0x0000000003145c32 in impala::ScalarFnCall::InterpretEval<impala_udf::StringVal> (
          this=0xaf2cb40, eval=0xd26ccc0, row=0x0) at be/src/exprs/scalar-fn-call.cc:485
      #8  0x000000000312bd85 in impala::ScalarFnCall::GetStringVal (this=0xaf2cb40, eval=0xd26ccc0,
          row=0x0) at be/src/exprs/scalar-fn-call.cc:599
      #9  0x00000000030da116 in impala::ScalarExprEvaluator::GetValue (this=0xd26ccc0, expr=..., row=0x0)
          at be/src/exprs/scalar-expr-evaluator.cc:299
      #10 0x00000000030d9da5 in impala::ScalarExprEvaluator::GetValue (this=0xd26ccc0, row=0x0)
          at be/src/exprs/scalar-expr-evaluator.cc:250
      #11 0x0000000001fc59bc in Java_org_apache_impala_service_FeSupport_NativeEvalExprsWithoutRow (
          env=0xd25b1e0, caller_class=0x7f724d523280, thrift_expr_batch=0x7f724d523298,
          thrift_query_ctx_bytes=0x7f724d523290) at be/src/service/fe-support.cc:237
      

      Attachments

        Activity

          People

            tarmstrong Tim Armstrong
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: